# MarketMaster

MarketMaster1/: LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  temp.py  tox.ini
MarketMaster1/src/marketmaster/: __main__.py  app.py  common.py  graph_menu.py  info_panel.py  main_window.py  progress_dialog.py  scaled_label.py  settings_menu.py  start_menu.py  styles.py  symbol_line_edit.py
MarketMaster1/src/marketmaster/resources/: __init__.py  marketmaster.icns  valid_symbols.json
MarketMaster1/src/tests/: test_common.py
MarketMaster1/src/tests_gui/: test_start_menu.py
