[metadata]
name = MarketMaster
description = Short description of the app here.
authors = Joseph Alipranti, Hyeong Woo Ko, Keval Makadiya, and Chris Wheeler
author_email = christopher.wheeler.320@my.csun.edu
license = MIT
license_files = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3 :: 3.10

[options]
packages =
    src/marketmaster
python_requires = ==3.10.*
package_dir =
    =.
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    tox>=3.24
